--- a/index.html
+++ b/index.html
@@ -23,74 +23,76 @@
         <article>
 
             <div>
+                <div id="cabecera1">
+                    Amor
+                </div>
+               
                 <p>A veces podemos pasarnos años sin vivir en absoluto y, de pronto, toda nuestra vida se concentra en
                     un
                     solo instante.</p>
             </div>
             <div>
+                <div id="cabecera2">
+                    Amor
+                </div>
 
                 <p>A menudo mantengo largas conversaciones conmigo mismo, y soy tan inteligente que a veces no entiendo
                     ni
                     una palabra de lo que digo.</p>
             </div>
             <div>
+                <div id="cabecera3">
+                    Educación
+                </div>
 
                 <p>Uno debería estar siempre enamorado. Por eso jamás deberíamos casarnos.</p>
             </div>
             <div>
+                <div id="cabecera4">
+                    Éxito
+                </div>
 
                 <p>Lo menos frecuente en este mundo es vivir. La mayoría de la gente existe, eso es todo.</p>
             </div>
             <div>
+                <div id="cabecera5">
+                    Infancia
+                </div>
 
                 <p>No hay nada como el amor de una mujer casada. Es una cosa de la que ningún marido tiene la menor
                     idea.
                 </p>
             </div>
             <div>
+                <div id="cabecera6">
+                    Moda
+                </div>
 
                 <p>El trabajo es el refugio de los que no tienen nada que hacer.</p>
             </div>
             <div>
+                <div id="cabecera7">
+                    Opiniones
+                </div>
 
                 <p>El medio mejor para hacer buenos a los niños es hacerlos felices.</p>
             </div>
             <div>
+                <div id="cabecera8">
+                    Trabajo
+                </div>
 
                 <p>La educación es algo admirable. Sin embargo, es bueno recordar que nada que valga la pena se puede
                     enseñar.</p>
             </div>
             <div>
+                <div id="cabecera9">
+                    Vida
+                </div>
 
                 <p>Para la mayoría de nosotros la verdadera vida es la vida que no llevamos.</p>
             </div>
-            <div>
-
-                <p>Los viejos lo creen todo; los adultos lo sospechan todo; mientras que los jóvenes lo saben todo.</p>
-            </div>
-            <div>
-
-                <p>Un tonto nunca se repone de un éxito.</p>
-            </div>
-            <div>
-
-                <p>Cualquiera puede hacer una cosa, el mérito está en hacer creer al mundo que uno lo ha hecho.</p>
-            </div>
-            <div>
-
-                <p>La moda es siempre un esperpento tal que nos vemos obligados a cambiarla cada seis meses.</p>
-            </div>
-            <div>
-
-                <p>Sólo podemos dar una opinión imparcial sobre las cosas que no nos interesan. Sin duda por eso mismo
-                    las
-                    opiniones imparciales carecen de valor.</p>
-            </div>
-            <div>
-
-                <p>Que un hombre muera por una causa no significa nada en cuanto al valor de la causa.</p>
-            </div>
-
+            
 
         </article>
     </section>
